<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>com.ontotext.graphdb.plugins</groupId>
	<artifactId>geosparql-plugin</artifactId>
	<version>3.1-SNAPSHOT</version>

	<properties>
		<graphdb.version>11.0-spring-6-TR18</graphdb.version>
		<gt.version>29.6</gt.version>
		<jena.version>6.1.0</jena.version>
		<sis.version>1.4</sis.version>
		<lucene.version>8.10.1</lucene.version>
		<jts.version>1.20.0</jts.version>
		<spatial4j.version>0.7</spatial4j.version>
		<slf4j.version>2.0.16</slf4j.version>
		<testcontainers.version>1.21.4</testcontainers.version>
		<dependency.check.version>8.2.1</dependency.check.version>
		<maven.compiler.release>21</maven.compiler.release>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<graphdb.packaging-smoke.graphdb-image>ontotext/graphdb:10.8.12</graphdb.packaging-smoke.graphdb-image>
		<graphdb.packaging-smoke.java-image>eclipse-temurin:21.0.11_10-jdk-jammy</graphdb.packaging-smoke.java-image>
		<graphdb.packaging-smoke.plugin-zip>${project.build.directory}/${project.artifactId}-graphdb-plugin.zip</graphdb.packaging-smoke.plugin-zip>

		<internal.repo>https://maven.ontotext.com/content/repositories/owlim-releases</internal.repo>
		<snapshots.repo>https://maven.ontotext.com/content/repositories/owlim-snapshots</snapshots.repo>

		<!-- Empty defaults to keep things happy, argLine can be overridden on command line,
			extraArgLine may be overridden by one of the profiles. -->
		<argLine />
		<extraArgLine />
	</properties>

	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.13.0</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>3.0.1</version>
				<configuration>
					<tagNameFormat>@{project.version}</tagNameFormat>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-assembly-plugin</artifactId>
				<version>3.7.1</version>
				<configuration>
					<finalName>${project.artifactId}</finalName>
					<descriptors>
						<descriptor>graphdb-plugin.xml</descriptor>
					</descriptors>
				</configuration>
				<executions>
					<execution>
						<id>package-plugin</id>
						<phase>package</phase>
						<goals>
							<goal>single</goal>
						</goals>
					</execution>
				</executions>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.2.5</version>
				<configuration>
					<argLine>${argLine} ${extraArgLine}</argLine>
					<systemPropertyVariables>
						<graphdb.stats.default>disabled</graphdb.stats.default>
					</systemPropertyVariables>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-javadoc-plugin</artifactId>
				<version>3.6.3</version>
			</plugin>

			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-dependency-plugin</artifactId>
				<version>3.7.0</version>
				<configuration>
					<!-- RDF4J is part of the GraphDB plugin API exposed by graphdb-sdk. -->
					<ignoredUsedUndeclaredDependencies>
						<ignoredUsedUndeclaredDependency>org.eclipse.rdf4j:*</ignoredUsedUndeclaredDependency>
					</ignoredUsedUndeclaredDependencies>
					<!-- These dependencies are supplied by the host or discovered indirectly at runtime. -->
					<ignoredUnusedDeclaredDependencies>
						<ignoredUnusedDeclaredDependency>org.apache.commons:commons-lang3</ignoredUnusedDeclaredDependency>
						<ignoredUnusedDeclaredDependency>org.apache.lucene:lucene-backward-codecs</ignoredUnusedDeclaredDependency>
						<ignoredUnusedDeclaredDependency>org.geotools:gt-referencing</ignoredUnusedDeclaredDependency>
						<ignoredUnusedDeclaredDependency>org.geotools:gt-epsg-extension</ignoredUnusedDeclaredDependency>
						<ignoredUnusedDeclaredDependency>org.geotools:gt-epsg-hsql</ignoredUnusedDeclaredDependency>
						<ignoredUnusedDeclaredDependency>org.ogc-schemas:ogc-tools-gml-jts</ignoredUnusedDeclaredDependency>
						<ignoredUnusedDeclaredDependency>org.glassfish.jaxb:jaxb-runtime</ignoredUnusedDeclaredDependency>
						<ignoredUnusedDeclaredDependency>org.hsqldb:hsqldb</ignoredUnusedDeclaredDependency>
						<!-- Test-only EPSG data; see its dependency declaration for the applicable terms. -->
						<ignoredUnusedDeclaredDependency>org.apache.sis.non-free:sis-embedded-data</ignoredUnusedDeclaredDependency>
					</ignoredUnusedDeclaredDependencies>
				</configuration>
			</plugin>

			<plugin>
				<groupId>org.owasp</groupId>
				<artifactId>dependency-check-maven</artifactId>
				<version>${dependency.check.version}</version>
				<configuration>
					<failBuildOnCVSS>7</failBuildOnCVSS>
					<skipProvidedScope>true</skipProvidedScope>
				</configuration>
				<executions>
					<execution>
						<phase>none</phase>
						<goals>
							<goal>aggregate</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>

	<repositories>
		<!-- Repository needed for GraphDB artifacts and some support artifacts -->
		<repository>
			<id>owlim-releases</id>
			<name>GraphDB Releases</name>
			<url>https://maven.ontotext.com/repository/owlim-releases</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
        <repository>
            <id>osgeo</id>
            <url>https://repo.osgeo.org/repository/release/</url>
        </repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>com.ontotext.graphdb</groupId>
			<artifactId>graphdb-sdk</artifactId>
			<version>${graphdb.version}</version>
			<scope>provided</scope>
		</dependency>

		<!-- GraphDB supplies the logging API to plugins at runtime. -->
		<dependency>
			<groupId>org.slf4j</groupId>
			<artifactId>slf4j-api</artifactId>
			<version>${slf4j.version}</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>3.18.0</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>net.sf.trove4j</groupId>
			<artifactId>trove4j</artifactId>
			<version>2.0.2</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-core</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-backward-codecs</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.lucene</groupId>
			<artifactId>lucene-spatial-extras</artifactId>
			<version>${lucene.version}</version>
		</dependency>

		<dependency>
			<groupId>org.locationtech.spatial4j</groupId>
			<artifactId>spatial4j</artifactId>
			<version>${spatial4j.version}</version>
		</dependency>

		<!-- Geometric & Geodetic stuff for GeoSPARQL implementation: -->
		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-core</artifactId>
			<version>${jena.version}</version>
		</dependency>

		<dependency>
			<groupId>org.apache.jena</groupId>
			<artifactId>jena-geosparql</artifactId>
			<version>${jena.version}</version>
		</dependency>

		<dependency>
			<groupId>org.locationtech.jts</groupId>
			<artifactId>jts-core</artifactId>
			<version>${jts.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-referencing</artifactId>
			<version>${gt.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-extension</artifactId>
			<version>${gt.version}</version>
		</dependency>

		<dependency>
			<groupId>org.geotools</groupId>
			<artifactId>gt-epsg-hsql</artifactId>
			<version>${gt.version}</version>
		</dependency>

		<dependency>
			<groupId>org.ogc-schemas</groupId>
			<artifactId>ogc-tools-gml-jts</artifactId>
			<version>4.0.2</version>
		</dependency>
		<dependency>
			<groupId>org.glassfish.jaxb</groupId>
			<artifactId>jaxb-runtime</artifactId>
			<version>4.0.5</version>
		</dependency>

		<!-- For Geotoolkit's cache. We need to have it outside the plugin classloader so it must be packaged in the dist -->
		<dependency>
			<groupId>org.hsqldb</groupId>
			<artifactId>hsqldb</artifactId>
			<version>2.7.1</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>commons-lang</groupId>
			<artifactId>commons-lang</artifactId>
			<version>2.6</version>
			<scope>provided</scope>
		</dependency>

		<dependency>
			<groupId>com.ontotext.graphdb</groupId>
			<artifactId>graphdb-tests-base</artifactId>
			<version>${graphdb.version}</version>
			<scope>test</scope>
			<exclusions>
				<!-- These are from the FTS functionality and should not be included as they break the plugins -->
				<exclusion>
					<groupId>org.apache.lucene</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>com.ontotext.graphdb</groupId>
			<artifactId>graphdb-runtime</artifactId>
			<version>${graphdb.version}</version>
			<scope>provided</scope>
			<exclusions>
				<!-- These are from the FTS functionality and should not be included as they break the plugins -->
				<exclusion>
					<groupId>org.apache.lucene</groupId>
					<artifactId>*</artifactId>
				</exclusion>
			</exclusions>
		</dependency>

		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.13.1</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.hamcrest</groupId>
			<artifactId>hamcrest-core</artifactId>
			<version>1.3</version>
			<scope>test</scope>
		</dependency>

		<dependency>
			<groupId>org.testcontainers</groupId>
			<artifactId>testcontainers</artifactId>
			<version>${testcontainers.version}</version>
			<scope>test</scope>
		</dependency>

		<!--
			Test-only EPSG dataset used by projected-CRS GeoSPARQL tests. It is not included in the assembled plugin.
			Running these tests uses data subject to the EPSG Terms of Use: https://epsg.org/terms-of-use.html
			Plugin deployments obtain optional EPSG data separately and expose it to Apache SIS through SIS_DATA.
		-->
		<dependency>
			<groupId>org.apache.sis.non-free</groupId>
			<artifactId>sis-embedded-data</artifactId>
			<version>${sis.version}</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.apache.commons</groupId>
				<artifactId>commons-lang3</artifactId>
				<version>3.18.0</version>
				<scope>provided</scope>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<profiles>
		<profile>
			<id>doclint-java8-disable</id>
			<activation>
				<jdk>[1.8,)</jdk>
			</activation>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-javadoc-plugin</artifactId>
						<configuration>
							<additionalOptions>-Xdoclint:none</additionalOptions>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
        <profile>
            <!--
                If test.java is set then we run the tests with a different Java distribution.
                The property test.java must point to a Java home directory.
                The test Java is assumed to be version 9+ so the appropriate arguments are added to surefire.
             -->
            <id>test-java</id>
            <activation>
                <property>
                    <name>test.java</name>
                </property>
            </activation>
            <properties>
                <extraArgLine>--add-exports jdk.management.agent/jdk.internal.agent=ALL-UNNAMED</extraArgLine>
            </properties>
            <build>
                <pluginManagement>
                    <plugins>
                        <plugin>
                            <groupId>org.apache.maven.plugins</groupId>
                            <artifactId>maven-surefire-plugin</artifactId>

                            <configuration>
                                <jvm>${test.java}/bin/java</jvm>
                            </configuration>
                        </plugin>

                    </plugins>
                </pluginManagement>
            </build>
        </profile>
		<profile>
			<!-- Adds Java 9+ -add-exports option to surefire if building on Java 9+ -->
			<id>java9plus-build</id>
			<activation>
				<jdk>[9,)</jdk>
			</activation>
			<properties>
				<extraArgLine>--add-exports jdk.management.agent/jdk.internal.agent=ALL-UNNAMED</extraArgLine>
			</properties>
		</profile>
		<profile>
			<id>graphdb-packaging-smoke</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-failsafe-plugin</artifactId>
						<version>3.2.5</version>
						<configuration>
							<systemPropertyVariables>
								<graphdb.packagingSmoke.dockerfile>${project.basedir}/src/test/docker/graphdb/Dockerfile</graphdb.packagingSmoke.dockerfile>
								<graphdb.packagingSmoke.pluginZip>${graphdb.packaging-smoke.plugin-zip}</graphdb.packagingSmoke.pluginZip>
								<graphdb.packagingSmoke.graphdbImage>${graphdb.packaging-smoke.graphdb-image}</graphdb.packagingSmoke.graphdbImage>
								<graphdb.packagingSmoke.javaImage>${graphdb.packaging-smoke.java-image}</graphdb.packagingSmoke.javaImage>
							</systemPropertyVariables>
						</configuration>
						<executions>
							<execution>
								<goals>
									<goal>integration-test</goal>
									<goal>verify</goal>
								</goals>
							</execution>
						</executions>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>

	<distributionManagement>
		<repository>
			<id>internal</id>
			<name>GraphDB Releases repository</name>
			<url>${internal.repo}</url>
		</repository>
		<snapshotRepository>
			<id>snapshots</id>
			<name>GraphDB Snapshots repository</name>
			<url>${snapshots.repo}</url>
		</snapshotRepository>
	</distributionManagement>

	<scm>
		<connection>scm:git:git@github.com:Ontotext-AD/graphdb-geosparql-plugin.git</connection>
		<developerConnection>scm:git:git@github.com:Ontotext-AD/graphdb-geosparql-plugin.git</developerConnection>
		<url>https://github.com/Ontotext-AD/graphdb-geosparql-plugin</url>
		<tag>HEAD</tag>
	</scm>
</project>
